Uniformate tutte le pagine secondarie alla struttura della home (solo titolo centrale, logo, sfondo tematico). Ripristinata la home originale.

--- a/chisono.html
+++ b/chisono.html
@@ -9,7 +9,7 @@
     body { background: #111; color: #fff; }
     .section-hero {
       height: 60vh;
-      background: url('img/mandala.jpg') center/cover no-repeat;
+      background: url('img/biancoenero.jpg') center/cover no-repeat;
       position: relative;
       display: flex;
       align-items: flex-end;
@@ -40,10 +40,9 @@
       width: 100%;
       font-family: 'LemonMilk', sans-serif;
     }
-    .bio-container { max-width: 700px; margin: 40px auto 0 auto; padding: 32px; background: rgba(0,0,0,0.7); border-radius: 18px; box-shadow: 0 4px 24px #000a; }
-    .bio-title { text-align: center; font-size: 2.5rem; color: #d29952; margin-bottom: 24px; letter-spacing: 2px; }
-    .bio-img { display: block; margin: 0 auto 24px auto; border-radius: 50%; width: 160px; height: 160px; object-fit: cover; box-shadow: 0 2px 12px #000a; }
-    .bio-text { font-size: 1.2rem; color: #ccc; text-align: center; }
+    .bio-container { max-width: 700px; margin: 40px auto 0 auto; padding: 32px; background: rgba(0,0,0,0.7); border-radius: 18px; box-shadow: 0 4px 24px #000a; text-align: center; }
+    .bio-title { font-size: 2.2rem; color: #d29952; margin-bottom: 18px; letter-spacing: 2px; }
+    .bio-text { color: #ccc; font-size: 1.2rem; }
   </style>
 </head>
 <body>
@@ -55,9 +54,8 @@
   </div>
   <main>
     <div class="bio-container">
-      <img src="img/luketa2-logo.png" alt="LukeTA2" class="bio-img" />
       <h1 class="bio-title">Chi sono</h1>
-      <p class="bio-text">Sono Luca, in arte LukeTA2. Da anni trasformo idee e sogni in tatuaggi unici, mettendo sempre ispirazione, tecnica e cuore in ogni progetto. La mia missione è creare per te un tatuaggio che ti rappresenti davvero.</p>
+      <p class="bio-text">Sono LukeTA2, tatuatore professionista. La mia passione è trasformare le idee in arte sulla pelle, con attenzione, tecnica e cuore. Ogni tatuaggio racconta una storia unica: la tua!</p>
     </div>
   </main>
 </body>
