--- a/tattoo.html
+++ b/tattoo.html
@@ -15,9 +15,6 @@
       align-items: flex-end;
       justify-content: center;
     }
-    .section-hero.bw {
-      background-image: url('img/biancoenero.jpg');
-    }
     .section-header {
       position: absolute;
       top: 0;
@@ -43,44 +40,39 @@
       width: 100%;
       font-family: 'LemonMilk', sans-serif;
     }
-    .tattoo-section { max-width: 1100px; margin: 40px auto 0 auto; padding: 32px; background: rgba(0,0,0,0.7); border-radius: 18px; box-shadow: 0 4px 24px #000a; margin-bottom: 40px; }
-    .tattoo-title { text-align: center; font-size: 2.2rem; margin-bottom: 24px; letter-spacing: 2px; color: #d29952; }
-    .tattoo-gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 32px; }
-    .tattoo-gallery img { width: 320px; max-width: 90vw; border-radius: 16px; box-shadow: 0 4px 24px #000a; }
-    .tattoo-desc { text-align: center; margin: 24px auto 0 auto; max-width: 600px; font-size: 1.2rem; color: #ccc; }
+    .gallery-container { max-width: 900px; margin: 40px auto 0 auto; padding: 32px; background: rgba(0,0,0,0.7); border-radius: 18px; box-shadow: 0 4px 24px #000a; }
+    .gallery-title { text-align: center; font-size: 2.2rem; color: #d29952; margin-bottom: 24px; letter-spacing: 2px; }
+    .gallery-section { margin-bottom: 32px; }
+    .gallery-section h2 { color: #d29952; font-size: 1.3rem; margin-bottom: 12px; }
+    .gallery-images { display: flex; gap: 18px; flex-wrap: wrap; justify-content: center; }
+    .gallery-images img { width: 180px; border-radius: 10px; box-shadow: 0 2px 12px #000a; }
   </style>
 </head>
 <body>
   <div class="section-hero">
     <div class="section-header">
       <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo" />
-      <span class="section-title">Tattoo Colorati</span>
+      <span class="section-title">Tattoo</span>
     </div>
   </div>
   <main>
-    <section class="tattoo-section">
-      <h1 class="tattoo-title">Tattoo Colorati</h1>
-      <p class="tattoo-desc">Colori vivaci, sfumature uniche e creatività per tatuaggi che si fanno notare.</p>
-      <div class="tattoo-gallery">
-        <img src="img/watercolor.jpg" alt="Tattoo Watercolor" />
-        <!-- Aggiungi altre immagini colorate qui -->
+    <div class="gallery-container">
+      <h1 class="gallery-title">Tattoo</h1>
+      <div class="gallery-section">
+        <h2>Tattoo Colorati</h2>
+        <div class="gallery-images">
+          <img src="img/mandala.jpg" alt="Tattoo Colorato 1" />
+          <!-- Altre immagini... -->
+        </div>
       </div>
-    </section>
-    <div class="section-hero bw">
-      <div class="section-header">
-        <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo" />
-        <span class="section-title">Tattoo Bianco e Nero</span>
+      <div class="gallery-section">
+        <h2>Tattoo Bianco e Nero</h2>
+        <div class="gallery-images">
+          <img src="img/biancoenero.jpg" alt="Tattoo Bianco e Nero 1" />
+          <!-- Altre immagini... -->
+        </div>
       </div>
     </div>
-    <section class="tattoo-section">
-      <h1 class="tattoo-title">Tattoo Bianco e Nero</h1>
-      <p class="tattoo-desc">Eleganza, contrasti e dettagli per tatuaggi senza tempo.</p>
-      <div class="tattoo-gallery">
-        <img src="img/biancoenero.jpg" alt="Tattoo Bianco e Nero" />
-        <img src="img/mandala.jpg" alt="Mandala Tattoo" />
-        <!-- Aggiungi altre immagini bianco e nero qui -->
-      </div>
-    </section>
   </main>
 </body>
 </html>
