--- a/blog.html
+++ b/blog.html
@@ -46,6 +46,32 @@
     .blog-list li { margin-bottom: 32px; }
     .blog-list h2 { color: #d29952; font-size: 1.5rem; margin-bottom: 8px; }
     .blog-list p { color: #ccc; font-size: 1.1rem; }
+    .social-footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 36px;
+      margin: 48px 0 24px 0;
+    }
+    .social-footer img {
+      width: 48px;
+      height: 48px;
+      filter: brightness(0.8);
+      transition: filter 0.3s;
+    }
+    .social-footer img:hover {
+      filter: brightness(1.2) invert(1);
+    }
+    @media (max-width: 768px) {
+      .social-footer {
+        gap: 24px;
+        margin: 32px 0 16px 0;
+      }
+      .social-footer img {
+        width: 36px;
+        height: 36px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -70,5 +96,10 @@
       </ul>
     </div>
   </main>
+  <div class="social-footer">
+    <a href="https://www.facebook.com/luketa2/" target="_blank"><img src="img/facebook.png" alt="Facebook" /></a>
+    <a href="https://www.instagram.com/luketa2" target="_blank"><img src="img/instagram.png" alt="Instagram" /></a>
+    <a href="https://wa.me/393482463458" target="_blank"><img src="img/whatsapp.png" alt="WhatsApp" /></a>
+  </div>
 </body>
 </html>
