--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
     .social-desktop {
       position: absolute;
       left: 72px;
-      top: 65%;
-      transform: translateY(-50%);
+      bottom: 60px;
+      top: auto;
+      transform: none;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -197,8 +198,14 @@
         justify-content: center;
         align-items: center;
         gap: 32px;
-        margin: 18px 0 0 0;
+        margin: 18px 0 32px 0;
         width: 100%;
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        background: rgba(0,0,0,0.85);
+        z-index: 1002;
+        padding: 8px 0;
       }
       .social-mobile img {
         width: 40px;
