--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     }
 
     .social-desktop {
-      position: absolute;
-      left: 72px;
-      bottom: 60px;
+      position: fixed;
+      left: 32px;
+      bottom: 40px;
       top: auto;
       transform: none;
       display: flex;
@@ -198,7 +198,7 @@
         justify-content: center;
         align-items: center;
         gap: 32px;
-        margin: 18px 0 32px 0;
+        margin: 0;
         width: 100%;
         position: fixed;
         left: 0;
