--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     header {
       position: absolute;
-      top: 0;
+      top: 80px;
       left: 0;
       width: 100%;
       padding: 20px 40px;
@@ -127,7 +127,7 @@
     .social-desktop {
       position: fixed;
       left: 32px;
-      bottom: 40px;
+      bottom: 120px;
       top: auto;
       transform: none;
       display: flex;
@@ -202,7 +202,7 @@
         width: 100%;
         position: fixed;
         left: 0;
-        bottom: 0;
+        bottom: 80px;
         background: rgba(0,0,0,0.85);
         z-index: 1002;
         padding: 8px 0;
