Alzati ulteriormente i loghi social nella versione desktop della home

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     .social-desktop {
       position: fixed;
       left: 32px;
-      bottom: 120px;
+      bottom: 220px;
       top: auto;
       transform: none;
       display: flex;
@@ -245,9 +245,9 @@
       .hero-text {
         align-items: center;
         text-align: center;
-        justify-content: flex-end;
-        margin-bottom: 20px;
-        margin-top: 40px;
+        justify-content: flex-start;
+        margin-bottom: 0;
+        margin-top: 100px;
         position: relative;
         z-index: 2;
       }
@@ -257,6 +257,9 @@
       .hero-text p {
         font-size: 16px;
         white-space: normal;
+      }
+      header {
+        top: 60px;
       }
     }
   </style>
